--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,12 @@
             <groupId>io.github.hakky54</groupId>
             <artifactId>consolecaptor</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
